--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/mediaBackButton"
+            android:id="@+id/playerBackButton"
             android:layout_width="46dp"
             android:layout_height="50dp"
             android:gravity="center"
@@ -29,7 +29,7 @@
             android:layout_marginTop="@dimen/media_track_image_margin_top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mediaBackButton"
+            app:layout_constraintTop_toBottomOf="@id/playerBackButton"
             tools:src="@drawable/track_image_placeholder"/>
 
         <TextView
