--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -19,8 +19,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        app:tabTextColor="@color/yp_black"
-        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+        style="@style/MediaTabStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
