--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -96,4 +96,16 @@
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
     </style>
+
+    <style name="MediaTabStyle" parent="Widget.Design.TabLayout">
+        <item name="tabTextColor">@color/yp_white</item>
+        <item name="tabIndicatorColor">@color/yp_white</item>
+        <item name="tabTextAppearance">@style/MediaTabTextAppearance</item>
+    </style>
+
+    <style name="MediaTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/media_text_size_14sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="textAllCaps">false</item>
+    </style>
 </resources>
