--- a/app/src/main/res/layout/fragment_favorite_tracks.xml
+++ b/app/src/main/res/layout/fragment_favorite_tracks.xml
@@ -3,14 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/empty_mediaList"
+    android:id="@+id/ll_empty_mediaList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.media.fragments.PlaylistFragment">
 
     <TextView
-        android:id="@+id/nothingFound"
         style="@style/SearchPlaceholderTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
