--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/track_card"
+    android:id="@+id/ll_track_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/track_image"
+        android:id="@+id/iv_track_image"
         android:layout_width="@dimen/image_size"
         android:layout_height="@dimen/image_size"
         android:scaleType="centerCrop"
@@ -21,7 +21,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/track_title"
+            android:id="@+id/tv_track_title"
             style="@style/TrackTitleTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/track_owner_name"
+                android:id="@+id/tv_track_owner_name"
                 style="@style/TrackTextStyle"
                 android:layout_width="@dimen/artist_name_width"
                 android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
                 android:textSize="@dimen/track_owner_time_size" />
 
             <ImageView
-                android:id="@+id/separator_dot"
+                android:id="@+id/iv_separator_dot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/dot"
@@ -52,7 +52,7 @@
                 android:layout_marginHorizontal="@dimen/dot_margin_start_end"/>
 
             <TextView
-                android:id="@+id/track_time"
+                android:id="@+id/tv_track_time"
                 style="@style/TrackTextStyle"
                 android:layout_width="@dimen/artist_name_width"
                 android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
     </LinearLayout>
     
     <ImageView
-        android:id="@+id/right_arrow"
+        android:id="@+id/iv_right_arrow"
         style="@style/SettingsIconStyle"
         android:src="@drawable/arrow_right"
         android:layout_marginStart="@dimen/track_card_element_margin"/>
