--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="@dimen/main_activity_padding_start_end"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/nav_tab_background">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tb_settingsBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="-16dp"
         app:buttonGravity="center_vertical"
-        app:navigationIcon="@drawable/back_space"
         app:title="@string/settings" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/sm_themeSwitcher"
-        style="@style/SettingsTextStyle"
+        style="@style/SwitcherStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
