--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -108,4 +108,17 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="textAllCaps">false</item>
     </style>
+
+    <style name="SwitcherStyle" parent="Widget.MaterialComponents.CompoundButton.Switch">
+        <item name="thumbTint">@color/yp_blue</item>
+        <item name="trackTint">@color/yp_lightBlue</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">start</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/settings_padding_top_bottom</item>
+        <item name="android:textColor">@color/yp_white</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
 </resources>
