--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,10 +35,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical|end</item>
     </style>
-    
-    <style name="SettingsSwitchStyle" parent="Theme.AppCompat.Light">
-        <item name="colorControlActivated">@color/yp_blue</item>
-    </style>
 
     <style name="SearchEditTextStyle">
         <item name="android:textColorHint">@color/yp_grey</item>
@@ -107,5 +103,18 @@
         <item name="android:textSize">@dimen/media_text_size_14sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="SwitcherStyle" parent="Widget.MaterialComponents.CompoundButton.Switch">
+        <item name="thumbTint">@color/yp_grey</item>
+        <item name="trackTint">@color/yp_lightGrey</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">start</item>
+        <item name="android:paddingVertical" tools:targetApi="o">@dimen/settings_padding_top_bottom</item>
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:textSize">@dimen/settings_text_size</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
     </style>
 </resources>
