--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/media_margin_top_48dp"
             android:background="@drawable/round_button"
-            android:src="@drawable/button_like"
+            android:src="@drawable/btn_like_not_active"
             app:layout_constraintEnd_toEndOf="@id/tv_artistName"
             app:layout_constraintTop_toBottomOf="@id/tv_artistName" />
 
