--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -37,9 +37,9 @@
             <TextView
                 android:id="@+id/tv_track_owner_name"
                 style="@style/TrackTextStyle"
-                android:layout_width="@dimen/artist_name_width"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Artist name"
+                tools:text="[Artist name]"
                 android:textSize="@dimen/track_owner_time_size" />
 
             <ImageView
